@@ -21,6 +21,7 @@ Cacti CHANGELOG
 -bug#0001079: Dates are not stored in host table using correct format
 -feature#0001069: add opacity/alpha channel to graph items (rrdtool-1.2.x only).
 -feature#0001065: Move to Top for List and Tree View. Omit boring scrolling
+-feature: add availability pings to host interface
 
 0.8.7
 -bug#0000480: Fix error after altering graphs displayed per page
